--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
   <link rel="stylesheet" href="style.css">
   <title>Chatbot</title>
 </head>
@@ -13,15 +14,7 @@
       <div class="query">
         <div class="bubble">
           <div class="text">
-            <p>Question goes here. lorem lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-        </div>
-      </div>
-      <div class="query">
-        <div class="bubble">
-          <div class="text">
-            <p>DDQuestion goes here. lorem lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>UDDt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Question goes here.</p>
           </div>
         </div>
       </div>
@@ -29,12 +22,18 @@
         <div class="bubble">
           <div class="text">
             <p>Response goes here.</p>
+            <p>Can be multi-line, but still contained to one bubble.</p>
           </div>
         </div>
       </div>
+
       <div class="input">
         <input class="input__type" type="text" name="" value="" placeholder="Ask something...">
-        <input class="input__button" type="button" name="" value="">
+        <div class="input__button">
+          <div class="ball one"></div>
+          <div class="ball two"></div>
+          <div class="ball three"></div>
+        </div>
       </div>
     </div>
   </div>
