--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/ApiAi.min.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Chatbot</title>
 </head>
 
@@ -64,7 +67,7 @@
 <!-- ^ END: RESPONSE: CARD -->
 
 <!-- LOADER -->
-        <div class="loading loading--visible">
+        <div class="loading loading--hidden">
           <div class="loading__left "></div>
           <div class="loading__middle"></div>
           <div class="loading__right"></div>
