loader moved, queries handled

--- a/index.html
+++ b/index.html
@@ -65,16 +65,15 @@
           </div>
         </div>
 <!-- ^ END: RESPONSE: CARD -->
-
-<!-- LOADER -->
-        <div class="loading loading--hidden">
-          <div class="loading__left "></div>
-          <div class="loading__middle"></div>
-          <div class="loading__right"></div>
-        </div>
-<!-- ^ END: LOADER -->
       </div>
 <!-- ^ END: CHATBOT__WINDOW -->
+<!-- LOADER -->
+      <div class="chatbot__loading chatbot__loading--hidden">
+        <div class="loading-left "></div>
+        <div class="loading-middle"></div>
+        <div class="loading-right"></div>
+      </div>
+<!-- ^ END: LOADER -->
       <div class="chatbot__input">
         <input class="input__text" type="text" name="" value="" placeholder="Say something">
         <div class="input__button">
