--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
 <!-- ^ END: LOADER -->
       <div class="chatbot__input">
-        <input class="input__text" type="text" name="" value="" placeholder="Say something">
+        <input class="input__text" type="text" name="" value="" placeholder="Say something" autofocus>
         <div class="input__button">
           <i class="material-icons input__mic input__mic--inactive">&#xE029;</i>
         </div>
