inc feedback, starting on quick reply handling

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <div class="quick-reply__button">Yes.</div>
             <div class="quick-reply__button">No.</div>
             <div class="quick-reply__button">Maybe.</div>
+
           </div>
         </div>
 <!-- ^ END: RESPONSE: QUICK REPLY -->
@@ -77,7 +78,8 @@
       <div class="chatbot__input">
         <input class="input__text" type="text" name="" value="" placeholder="Say something" autofocus>
         <div class="input__button">
-          <i class="material-icons input__mic input__mic--inactive">&#xE029;</i>
+          <i class="material-icons input__send input__send--inactive">&#xE163;</i>
+          <!-- <i class="material-icons input__mic input__mic--inactive">&#xE029;</i> -->
         </div>
       </div>
 <!-- ^ END: CHATBOT__INPUT -->
