cards. removed placeholder divs from chatwindow

--- a/index.html
+++ b/index.html
@@ -17,57 +17,7 @@
   <div class="container">
     <div class="chatbot">
       <div class="chatbot__header"></div>
-      <div class="chatbot__window">
-<!-- QUERY -->
-        <div class="query">
-          <div class="bubble">
-            <div class="bubble__text">
-              <p>Question goes here.</p>
-            </div>
-          </div>
-        </div>
-<!-- ^ END: QUERY -->
-
-<!-- RESPONSE: BASIC -->
-        <div class="response">
-          <div class="bubble">
-            <div class="bubble__text">
-              <p>Response goes here.</p>
-              <p>Can be multi-line; still contained to one bubble.</p>
-            </div>
-          </div>
-        </div>
-<!-- ^ END: RESPONSE: BASIC -->
-
-<!-- RESPONSE: QUICK REPLY -->
-        <div class="response">
-          <div class="bubble">
-            <div class="bubble__text">
-              <p>What is your quick reply?</p>
-            </div>
-          </div>
-          <div class="quick-reply">
-            <div class="quick-reply__button">Yes.</div>
-            <div class="quick-reply__button">No.</div>
-            <div class="quick-reply__button">Maybe.</div>
-
-          </div>
-        </div>
-<!-- ^ END: RESPONSE: QUICK REPLY -->
-
-<!-- RESPONSE: CARD -->
-        <div class="response">
-          <div class="card">
-            <div class="card__image"></div>
-            <div class="card__heading"><strong>This is the heading. It should be truncated with ellipsis after one line.</strong></div>
-            <div class="card__subheading">This is the subheading. It should be truncated at 80 characters. </div>
-            <div class="card__button">Button 1</div>
-            <div class="card__button">Button 2</div>
-          </div>
-        </div>
-<!-- ^ END: RESPONSE: CARD -->
-      </div>
-<!-- ^ END: CHATBOT__WINDOW -->
+      <div class="chatbot__window"></div>
 <!-- LOADER -->
       <div class="chatbot__loading chatbot__loading--hidden">
         <div class="loading-left "></div>
