--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
     <div class="chatbot">
       <div class="chatbot__header"></div>
       <div class="chatbot__window"></div>
-      <div class="chatbot__loading chatbot__loading--hidden">
-        <div class="loading-left "></div>
-        <div class="loading-middle"></div>
-        <div class="loading-right"></div>
+      <div class="chatbot__status">
+        <div class="loading loading--hidden">
+          <div class="loading__left "></div>
+          <div class="loading__middle"></div>
+          <div class="loading__right"></div>
+        </div>
+        <div class="error error--visible">
+          <div class="error__message">Something fucked up.</div>
+        </div>
       </div>
+
       <div class="chatbot__input">
         <input class="input__text" type="text" name="" value="" placeholder="Say something" autofocus>
         <div class="input__button">
