--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           <div class="loading__middle"></div>
           <div class="loading__right"></div>
         </div>
-        <div class="error error--visible">
-          <div class="error__message">Something fucked up.</div>
+        <div class="error error--hidden">
+          <div class="error__message"></div>
         </div>
       </div>
 
