configurable header text and bg color, removed container

--- a/index.html
+++ b/index.html
@@ -14,26 +14,29 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="chatbot">
-      <div class="chatbot__header"></div>
-      <div class="chatbot__window"></div>
-      <div class="chatbot__status">
-        <div class="loading loading--hidden">
-          <div class="loading__left "></div>
-          <div class="loading__middle"></div>
-          <div class="loading__right"></div>
-        </div>
-        <div class="error error--hidden">
-          <div class="error__message"></div>
-        </div>
+  <div class="chatbot">
+    <div class="header">
+      <div class="header__wrapper">
+        <div class="header__color"></div>
+        <h1 class="header__text"></h1>
       </div>
+    </div>
+    <div class="window"></div>
+    <div class="status">
+      <div class="loading loading--hidden">
+        <div class="loading__left "></div>
+        <div class="loading__middle"></div>
+        <div class="loading__right"></div>
+      </div>
+      <div class="error error--hidden">
+        <div class="error__message"></div>
+      </div>
+    </div>
 
-      <div class="chatbot__input">
-        <input class="input__text" type="text" name="" value="" placeholder="Say something" autofocus>
-        <div class="input__button">
-          <i class="material-icons input__send input__send--inactive">&#xE163;</i>
-        </div>
+    <div class="input">
+      <input class="input__text" type="text" name="" value="" placeholder="Say something" autofocus>
+      <div class="input__button">
+        <i class="material-icons input__send input__send--inactive">&#xE163;</i>
       </div>
     </div>
   </div>
