--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
         <h1 class="header__text"></h1>
       </div>
     </div>
-    <div class="window"></div>
-    <div class="status">
-      <div class="loading loading--hidden">
-        <div class="loading__left "></div>
-        <div class="loading__middle"></div>
-        <div class="loading__right"></div>
-      </div>
-      <div class="error error--hidden">
-        <div class="error__message"></div>
+    <div class="window">
+      <div class="conversation"></div>
+      <div class="status">
+        <div class="loading loading--hidden">
+          <div class="loading__left "></div>
+          <div class="loading__middle"></div>
+          <div class="loading__right"></div>
+        </div>
+        <div class="error error--hidden">
+          <div class="error__message"></div>
+        </div>
       </div>
     </div>
 
